# CRYPI-2025

./: .gitignore  README.md
src/: Cargo.toml  main.rs
src/authority-site/: index.html  package-lock.json  package.json  server.js
src/authority-site/public/: index.html  styles.css
src/db/: .gitignore  README.md  pyproject.toml
src/db/db/: db.sqlite3
src/db/db/blockchain/: admin.py  models.py  urls.py  views.py
src/db/db/blockchain/management/commands/: proof.py
src/db/db/blockchain/migrations/: 0001_initial.py  0002_commitment_id_order_idx.py
src/db/db/db/: settings.py  urls.py
src/demo/: README.md  package.json  server.js
src/demo/public/: index.html  server.js  styles.css
src/identity/: Cargo.toml  README.md  install.sh
src/identity/keys/: proving.key  verification.key
src/identity/src/: main.rs
