[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ark-bn254 = "0.3"
ark-ff = "0.3"
ark-groth16 = "0.3"
ark-r1cs-std = "0.3"
ark-relations = "0.3"
ark-serialize = "0.3"
ark-snark = "0.3"
arkworks-native-gadgets = "1.2"
arkworks-r1cs-gadgets = "1.2"
arkworks-utils = { version = "1.0.1", features = ["poseidon_bn254_x5_3"] }
blake2 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.3"
chrono = "0.4"
dirs   = "4.0"
fern = "0.6"
log = "0.4"
